<resources>
    <string name="app_name">Edvora Ride</string>
    <string name="ride_id">Ride Id: %1$s</string>
    <string name="origin_station">Origin Station: %1$d</string>
    <string name="station_path">station path: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="distance">Distance: %1$d</string>
    <string name="tag_line">Pick a safe ride</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>