<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ride_card"
    android:layout_width="300dp"
    android:layout_height="370dp"
    android:layout_gravity="center_horizontal"
    app:cardBackgroundColor="@color/dark_grey"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/map_card"
            android:layout_width="270dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <view
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ride_id"
            style="@style/ride_text_style"
            android:layout_marginTop="20dp"
            android:text="@string/ride_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_card" />

        <TextView
            android:id="@+id/ride_origin"
            style="@style/ride_text_style"
            android:text="@string/origin_station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ride_id" />

        <TextView
            android:id="@+id/ride_path"
            style="@style/ride_text_style"
            android:text="@string/station_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ride_origin" />


        <TextView
            android:id="@+id/ride_date"
            style="@style/ride_text_style"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ride_path" />

        <TextView
            android:id="@+id/distance"
            style="@style/ride_text_style"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ride_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
